# llm-linter

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  main.py  pyproject.toml
linter/: __init__.py  __main__.py  core.py  tools.py
linter/prompts/: complexity.md  design.md  duplication.md  error_handling.md  recommendations.md  security.md  structure.md  testing.md  typing_docs.md
