[project]
name = "llm-linter"
version = "0.1.0"
description = "An intelligent multi-agent linting tool powered by large language models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.99.6",
    "openai-agents>=0.2.5",
    "pydantic>=2.0.0",
]

[project.scripts]
llm-linter = "linter.core:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linter"]
